...
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/password_information"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/account_logo"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/logo_light_mode"
                    android:visibility="gone" />
...
                    android:layout_height="58dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/hint_color"
                    app:boxBackgroundColor="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/acc_type"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/dm_sans"
                        android:inputType="none"
                        android:background="@drawable/edittext_field"
                        android:paddingStart="16dp"
...
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/remainingLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:visibility="gone">

...
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/dm_sans_medium"
                            android:text="@string/email"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <EditText
...
                        android:lines="1"
                        android:paddingStart="14dp"
                        android:textColorHint="@color/hint_color"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/emailHelperTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/red"
                        android:textSize="13sp"
                        android:visibility="gone"
                        tools:text="Please Enter the Email." />

                    <!--UserName-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/dm_sans_medium"
                            android:text="@string/username"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <EditText
...
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/dm_sans_medium"
                            android:text="@string/password"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <EditText
...
                        android:layout_width="133dp"
                        android:layout_height="1dp"
                        android:layout_gravity="end"
                        android:background="#7489F9" />

                    <TextView
                        android:id="@+id/passwordHelperTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/red"
                        android:textSize="13sp"
                        android:visibility="gone"
                        tools:text="Please Enter the Password." />

                    <!--Note-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
...
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/dm_sans_medium"
                            android:text="@string/note"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <EditText
...
                        </com.google.android.material.chip.ChipGroup>

                    </HorizontalScrollView>


                    <include
                        android:id="@+id/btnSave"
                        layout="@layout/primary_progress_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="50dp" />

...
