...
            tools:listitem="@layout/item_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
...
