...
    <string name="master_key">Master Key</string>
    <string name="end_to_end_encryption">End-to-End Encryption</string>
    <string name="confirm_master_key">Confirm Master Key</string>
    <string name="enter_your_master_key_to_continue">Kindly provide your master key to proceed 👋.</string>
    <string name="save_master_key">Save Master Key</string>
    <string name="master_key_cannot_be_blank">Please enter your Master Key</string>
    <string name="at_least_6_letter_long">Your master key should be at least 6 letters long</string>
    <string name="incorrect_password">Incorrect Password! Please check your Master Key</string>
    <string name="change_master_key">Change Master Key</string>
    <string name="old_password">Old Master Key</string>
    <string name="create_master_key">Create new Master Key</string>
    <string name="old_master_key_cannot_be_blank">Old Master Key cannot be blank</string>
    <string name="old_master_key_is_incorrect">The Old Master Key is incorrect</string>
    <string name="name">Name</string>
    <string name="store_your_credentials_safely">Store your credentials safely</string>
    <string name="type_a_password">Type a password</string>
    <string name="confirm_master_key_cannot_be_blank">Please Enter your Master Key to confirm</string>
    <string name="enter_correct_master_key">Please enter the correct Master Key</string>
    <string name="master_key_matches">Master Key matches</string>
    <string name="search">Search...</string>
    <string name="add_icon">add_icon</string>
    <string name="image_logo">image_logo</string>
    <string name="add_a_new_password">Add a new password</string>
    <string name="new_password">New Password</string>
...
